Fixed input buttons jumping because of changing border width on hover

--- a/src/scss/modules/buttons.scss
+++ b/src/scss/modules/buttons.scss
@@ -38,7 +38,7 @@ button,
 	margin: 0;
 	padding: $pad-s $pad-m;
 	outline: none;
-	border: 0.1em solid $color-button-default-bg;
+	border: 1px solid $color-button-default-bg;
 	color: $color-button-default;
 	border-radius: $border-radius-s;
 	background-color: $color-button-default-bg;
